<resources>
    <string name="app_name">MapboxPractice</string>
    <string name="map_box_key">pk.eyJ1IjoiYWFyeWFudGl3YXJpIiwiYSI6ImNrcmJ5OXFpMzN2YjUydW1udHN6ZTI2cDEifQ.k4gv777y7Qw7iJWFW9oNog</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Simple Map Screen</string>
    <string name="map_with_polyline">Map with Polyline</string>
    <string name="map_with_polygons">Map with Polygons</string>
    <string name="show_hide_layers">Show and hide layers</string>
    <string name="layer_click">Click on layers</string>
    <string name="add_points">Create a Polygon</string>
    <string name="map_support_mapbox">SupportMapBoxFragment</string>
    <string name="map_with_points">Map with Points</string>
    <string name="previous">Back to Home</string>
    <string name="show_multiple_geometries">Show Multiple Geometries</string>
    <string name="create_a_point">Create a point</string>
    <string name="create_a_polyline">Create a Polyline</string>
    <string name="merge_polygons">Merge Polygons</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Create point again</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>