<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <Button
        android:id="@+id/button_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />
    <Button
        android:id="@+id/button_supportMapBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_support_mapbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_first"
         />
    <Button
        android:id="@+id/button_map_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_with_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_supportMapBox" />
    <Button
        android:id="@+id/button_map_polyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_with_polyline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_map_point" />
    <Button
        android:id="@+id/button_map_polygons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_with_polygons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_map_polyline" />
    <Button
        android:id="@+id/show_hide_map_layers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_layers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_map_polygons" />
    <Button
        android:id="@+id/click_layers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layer_click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_hide_map_layers" />
    <Button
        android:id="@+id/show_multiple_geometrie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_multiple_geometries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/click_layers" />
    <Button
        android:id="@+id/location_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_multiple_geometrie" />
</androidx.constraintlayout.widget.ConstraintLayout>